# ecq-daq

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  build_package.py  daq_uart.py  mock_daq_hardware.py  plot_ecg_data.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_uart_with_mock.py
ecg_daq/: __init__.py
ecg_daq.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ecg_daq/core/: __init__.py  config.py  exceptions.py  models.py
ecg_daq/data_acquisition/: __init__.py  packet_parser.py  uart_receiver.py
ecg_daq/ecg_daq.egg-info/: SOURCES.txt  requires.txt  top_level.txt
ecg_daq/examples/: __init__.py  real_time_monitor.py  test_uart_with_mock.py
ecg_daq/protocols/: __init__.py  crc.py
examples/: README.md  demo_ecg.py  real_time_monitor.py  test_hardware.py
