[metadata]
name = ecg-daq
version = attr: ecg_daq.__version__
author = Mehrshad
author_email = mehrshad@example.com
description = High-performance ECG Data Acquisition System
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mehrshad/ecg-daq
project_urls =
    Bug Tracker = https://github.com/mehrshad/ecg-daq/issues
    Documentation = https://github.com/mehrshad/ecg-daq#readme
    Source Code = https://github.com/mehrshad/ecg-daq
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: System :: Hardware :: Hardware Drivers
    Topic :: Communications :: Serial

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pydantic>=1.10.0
    numpy>=1.20.0
    pyserial>=3.5
    asyncio-mqtt>=0.10.0
    scipy>=1.8.0
    matplotlib>=3.5.0
    pandas>=1.4.0
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    tests
    tests.*
    test_data

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-asyncio>=0.21.0
    pytest-cov>=4.0.0
    black>=22.0.0
    isort>=5.10.0
    flake8>=4.0.0
    mypy>=0.991
docs =
    sphinx>=4.0.0
    sphinx-rtd-theme>=1.0.0
    myst-parser>=0.18.0
visualization =
    seaborn>=0.11.0
    plotly>=5.0.0
testing =
    pytest>=7.0.0
    pytest-asyncio>=0.21.0
    pytest-cov>=4.0.0

[options.entry_points]
console_scripts =
    ecg-monitor = ecg_daq.examples.real_time_monitor:main
    ecg-plot = ecg_daq.examples.plot_ecg_data:main
    ecg-mock-hardware = ecg_daq.examples.mock_daq_hardware:main

[options.package_data]
ecg_daq = py.typed

[bdist_wheel]
universal = 0

[egg_info]
tag_build = 
tag_date = 0
